--- a/cluster_config/app/monitoring/k8s-dashboard.yaml
+++ b/cluster_config/app/monitoring/k8s-dashboard.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: monitoring
+  name: kubernetes-dashboard
 
 ---
 
@@ -25,7 +25,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 
 ---
 
@@ -35,7 +35,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 spec:
   ports:
     - port: 443
@@ -51,7 +51,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard-certs
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 type: Opaque
 
 ---
@@ -62,7 +62,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard-csrf
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 type: Opaque
 data:
   csrf: ""
@@ -75,7 +75,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard-key-holder
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 type: Opaque
 
 ---
@@ -86,7 +86,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard-settings
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 
 ---
 
@@ -96,7 +96,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 rules:
   # Allow Dashboard to get, update and delete Dashboard exclusive secrets.
   - apiGroups: [""]
@@ -140,7 +140,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -148,9 +148,23 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: kubernetes-dashboard
-    namespace: monitoring
+    namespace: kubernetes-dashboard
+
 
 ---
+
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: kubernetes-dashboard
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: kubernetes-dashboard
+# subjects:
+#   - kind: ServiceAccount
+#     name: kubernetes-dashboard
+#     namespace: kubernetes-dashboard
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -159,11 +173,11 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: kubernetes-dashboard
+  name: cluster-admin #kubernetes-dashboard
 subjects:
   - kind: ServiceAccount
-    name: kubernetes-dashboard
-    namespace: monitoring
+    name: cluster-admin #kubernetes-dashboard
+    namespace: kubernetes-dashboard
 
 ---
 
@@ -173,7 +187,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 spec:
   replicas: 1
   revisionHistoryLimit: 10
@@ -187,7 +201,7 @@ spec:
     spec:
       containers:
         - name: kubernetes-dashboard
-          image: kubernetesui/dashboard:v2.0.0-beta6
+          image: kubernetesui/dashboard:v2.0.0-beta8
           imagePullPolicy: Always
           ports:
             - containerPort: 8443
@@ -239,7 +253,7 @@ metadata:
   labels:
     k8s-app: dashboard-metrics-scraper
   name: dashboard-metrics-scraper
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 spec:
   ports:
     - port: 8000
@@ -255,7 +269,7 @@ metadata:
   labels:
     k8s-app: dashboard-metrics-scraper
   name: dashboard-metrics-scraper
-  namespace: monitoring
+  namespace: kubernetes-dashboard
 spec:
   replicas: 1
   revisionHistoryLimit: 10
