--- a/cluster_config/app/monitoring/values.yaml
+++ b/cluster_config/app/monitoring/values.yaml
@@ -4,8 +4,9 @@
 # name: value
 
 image:
-  repository: k8s.gcr.io/kubernetes-dashboard-arm
-  tag: v1.10.1
+  repository: kubernetesui/dashboard-arm
+
+  tag: v2.0.0-beta8
   pullPolicy: IfNotPresent
   pullSecrets: []
 
