--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,8 @@
 install_rasp/secret.yaml filter=git-crypt diff=git-crypt
 install_k3s/kubeconfig filter=git-crypt diff=git-crypt
 
+k8s-rasb-config/cluster_config/app/cert-manager/tls.crt diff=git-crypt
+k8s-rasb-config/cluster_config/app/cert-manager/tls.key diff=git-crypt
+
+
 .gitattributes !filter !diff
