--- a/cluster_config/ingress/ingress.yaml
+++ b/cluster_config/ingress/ingress.yaml
@@ -23,7 +23,7 @@ spec:
           serviceName: home-website-service
           servicePort: 80
 
-  tls:
-  - hosts:
-    - home.samsja.fr
-    secretName: samsja-cloud-tls
+  # tls:
+  # - hosts:
+  #   - home.samsja.fr
+  #   secretName: samsja-cloud-tls
