--- a/cluster_config/app/keycloak/values.yaml
+++ b/cluster_config/app/keycloak/values.yaml
@@ -9,9 +9,9 @@ replicas: 1
 
 image:
   # The Keycloak image repository
-  repository: docker.io/jboss/keycloak
+  repository: samsja/keycloak
   # Overrides the Keycloak image tag whose default is the chart version
-  tag: ""
+  tag: arm-11.0.1
   # The Keycloak image pull policy
   pullPolicy: IfNotPresent
 
