--- a/cluster_config/app/keycloak/values-secret.yaml
+++ b/cluster_config/app/keycloak/values-secret.yaml
@@ -1,1 +1,31 @@
-9CMZxCv63C59xcwa
+extraEnv: |
+  # - name: KEYCLOAK_LOGLEVEL
+  #   value: DEBUG
+  # - name: WILDFLY_LOGLEVEL
+  #   value: DEBUG
+  # - name: CACHE_OWNERS_COUNT
+  #   value: "2"
+  # - name: CACHE_OWNERS_AUTH_SESSIONS_COUNT
+  #   value: "2"
+
+    - name: KEYCLOAK_HTTP_PORT
+      value: "80"
+    - name: KEYCLOAK_HTTPS_PORT
+      value: "443"
+    - name: PROXY_ADDRESS_FORWARDING
+      value: "true"
+    # - name: KEYCLOAK_HOSTNAME
+    #   value: keycloak.samsja.fr
+
+    - name: DB_VENDOR
+      value: postgres
+    - name: DB_ADDR
+      value: main-psql-postgresql.database
+    - name: DB_PORT
+      value: "5432"
+    - name: DB_DATABASE
+      value: keycloak
+    - name: DB_USER
+      value: keycloak
+    - name: DB_PASSWORD
+      value: 9CMZxCv63C59xcwa
