--- a/cluster_config/ingress/ingress.yaml
+++ b/cluster_config/ingress/ingress.yaml
@@ -22,7 +22,7 @@ spec:
         backend:
           serviceName: home-website-service
           servicePort: 80
-  tls:
-  - hosts:
-    - home.samsja.fr
-    secretName: samsja-cloud-staging-certificate-2vnqq
+  # tls:
+  # - hosts:
+  #   - home.samsja.fr
+  #   secretName: samsja-cloud-staging-certificate-2vnqq
