--- a/cluster_config/ingress/nextcloud.yaml
+++ b/cluster_config/ingress/nextcloud.yaml
@@ -17,7 +17,7 @@ spec:
           backend:
             serviceName: "nextcloud" # Mapping to the service (see kubectl get services -n nextcloud)
             servicePort: 8080 # Mapping to the port (see kubectl get services -n nextcloud)
-  tls:
-  - hosts:
-    - "nextcloud.samsja.fr" # Host to access nextcloud
-    secretName: "samsja-cloud-tls" # Name of the certifciate (see kubectl get certificate -A)
+  # tls:
+  # - hosts:
+  #   - "nextcloud.samsja.fr" # Host to access nextcloud
+  #   secretName: "samsja-cloud-tls" # Name of the certifciate (see kubectl get certificate -A)
