--- a/cluster_config/ingress/keycloak.yaml
+++ b/cluster_config/ingress/keycloak.yaml
@@ -6,7 +6,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "traefik"
     traefik.frontend.rule.type: PathPrefixStrip
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    cert-manager.io/cluster-issuer: "selfsigned-issuer"
+
 spec:
 
   rules:
@@ -17,7 +19,7 @@ spec:
           backend:
             serviceName: keycloak-http
             servicePort: 80
-  # tls:
-  # - hosts:
-  #   - "keycloak.samsja.fr" # Host to access keycloak
-  #   secretName: "keycloak-staging-tls" # Name of the certifciate (see kubectl get certificate -A)
+  tls:
+  - hosts:
+    - "keycloak.samsja.fr" # Host to access keycloak
+    secretName: "keycloak-staging-tls" # Name of the certifciate (see kubectl get certificate -A)
