add pvc to nextcloud

--- a/cluster_config/app/nextCloud/secret-values.yaml
+++ b/cluster_config/app/nextCloud/secret-values.yaml
@@ -1,3 +1,7 @@
 nextcloud:
-  #host: nextcloud.samsja.fr
   password: RW2nfV#a}:rrp;p$
+
+
+externalDatabase:
+  ## Database password
+  password: YnDx~8p8AU"x5uLm
